--- a/index.html
+++ b/index.html
@@ -9,19 +9,29 @@
 <body>
 
   <div class="pics">
-   <img src="images/argyle-0.png" alt="img1" id="img1">
-   <img src="images/argyle-1.png" alt="img2" id="img2">
-   <img src="images/argyle-2.png" alt="img3" id="img3">
-   <img src="images/argyle-3.png" alt="img4" id="img4">
-   <img src="images/argyle-4.png" alt="img5" id="img5">
+    <img src="images/argyle-0.png" alt="img1" id="img1">
+    <img src="images/argyle-1.png" alt="img2" id="img2">
+    <img src="images/argyle-2.png" alt="img3" id="img3">
+    <img src="images/argyle-3.png" alt="img4" id="img4">
+    <img src="images/argyle-4.png" alt="img5" id="img5">
   </div>
 
   <ul class="dots">
-	<li><a href="#img1"></a></li>		
-	<li><a href="#img2"></a></li>
-	<li><a href="#img3"></a></li>
-	<li><a href="#img4"></a></li>
-	<li><a href="#img5"></a></li>
+    <li>
+      <a href="#img1"></a>
+    </li>
+    <li>
+      <a href="#img2"></a>
+    </li>
+    <li>
+      <a href="#img3"></a>
+    </li>
+    <li>
+      <a href="#img4"></a>
+    </li>
+    <li>
+      <a href="#img5"></a>
+    </li>
   </ul>
 </body>
 </html>
